# experience-rating

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_experience_rating.py
notebooks/: benchmark.py  demo_experience_rating.py
src/experience_rating/: __init__.py  bonus_malus.py  experience_mod.py
tests/: test_bonus_malus.py  test_experience_mod.py
