[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "experience-rating"
version = "0.1.0"
description = "NCD/bonus-malus systems, experience modification factors, and schedule rating for UK insurance pricing"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "actuarial",
    "experience-rating",
    "bonus-malus",
    "NCD",
    "no-claims-discount",
    "insurance",
    "pricing",
    "experience-modification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "polars>=1.0",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/burning-cost/experience-rating"
Issues = "https://github.com/burning-cost/experience-rating/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/experience_rating"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/experience_rating"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
