[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "experience-rating"
version = "0.2.0"
description = "Deprecated — use insurance-credibility instead"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "actuarial",
    "experience-rating",
    "bonus-malus",
    "NCD",
    "insurance",
    "pricing",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "insurance-credibility>=0.1.0",
]

[project.urls]
Repository = "https://github.com/burning-cost/experience-rating"

[tool.hatch.build.targets.wheel]
packages = ["src/experience_rating"]
